force-app/main/default/objects/Expense__c/fields/Adoption_Cost__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Cost__c</fullName>
    <formula>Adoption__r.Adoption_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adoption Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>