force-app/main/default/objects/Expense__c/fields/Hotel_Cost__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Cost__c</fullName>
    <description>Night cost multiplied by total nights to find total cost of stay</description>
    <formula>Pet_Hotel__r.Night_Cost__c  *  Pet_Hotel__r.Nights__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hotel Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>