force-app/main/default/objects/Expense__c/fields/Pet_Hotel__c.field-meta.xml
<CustomField>
    <fullName>Pet_Hotel__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pet Hotel</label>
    <referenceTo>Actual_Pet_Hotel__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>